--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     
     <script src="./scripts/turn.js"></script>
     <script src="./scripts/player.js"></script>
+    <script src="./scripts/computer.js"></script>
 </body>
 </html>
