--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe - Play it now!</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/game-menu.css">
     <link rel="stylesheet" href="./styles/game-itself.css">
 </head>
 <body>
     <div class="game">
+        <!-- GAME MENU -->
+        <div class="game-menu">
+            <div class="game-menu-play">
+                <button class="game-menu-play-button" type="button">Start</button>
+            </div>
+        </div>
 
         <!-- GAME ITSELF -->
         <div class="game-itself">
