--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="game">
         <!-- GAME MENU -->
-        <div class="game-menu">
+        <div class="game-menu game-menu-active">
             <div class="game-menu-play">
-                <button class="game-menu-play-button" type="button">Start</button>
+                <button class="game-menu-play-button" type="button" id="startButton">Start</button>
             </div>
         </div>
 
@@ -30,15 +30,15 @@
                 </button>
             </div>
             <div class="game-itself-grid">
-                <button value="1" type="button" class="game-itself-grid-itself"></button>
-                <button value="2" type="button" class="game-itself-grid-itself"></button>
-                <button value="3" type="button" class="game-itself-grid-itself"></button>
-                <button value="4" type="button" class="game-itself-grid-itself"></button>
-                <button value="5" type="button" class="game-itself-grid-itself"></button>
-                <button value="6" type="button" class="game-itself-grid-itself"></button>
-                <button value="7" type="button" class="game-itself-grid-itself"></button>
-                <button value="8" type="button" class="game-itself-grid-itself"></button>
-                <button value="9" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="1" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="2" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="3" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="4" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="5" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="6" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="7" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="8" type="button" class="game-itself-grid-itself"></button>
+                <button disabled value="9" type="button" class="game-itself-grid-itself"></button>
             </div>
             <div class="game-itself-bottom"></div>
         </div>
