--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="game-menu game-menu-active">
             <div class="game-menu-play">
                 <button class="game-menu-play-button" type="button" id="startButton">Start</button>
+                <button disabled class="game-menu-play-button" type="button" id="restartButton">Restart</button>
             </div>
         </div>
 
