--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
                 <button disabled value="8" type="button" class="game-itself-grid-itself"></button>
                 <button disabled value="9" type="button" class="game-itself-grid-itself"></button>
             </div>
-            <div class="game-itself-bottom"></div>
+            <div class="game-itself-bottom">
+                <div class="game-itself-bottom-inner">
+                    <h5 class="game-itself-bottom-inner-subheader">X(You)</h5>
+                    <h3 class="game-itself-bottom-inner-number" id="playerWonText">0</h3>
+                </div>
+                <div class="game-itself-bottom-inner">
+                    <h5 class="game-itself-bottom-inner-subheader">Ties</h5>
+                    <h3 class="game-itself-bottom-inner-number">0</h3>
+                </div>
+                <div class="game-itself-bottom-inner">
+                    <h5 class="game-itself-bottom-inner-subheader">O(CPU)</h5>
+                    <h3 class="game-itself-bottom-inner-number">0</h3>
+                </div>
+            </div>
         </div>
     </div>
     
