--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="game-itself-bottom-inner">
                     <h5 class="game-itself-bottom-inner-subheader">O(CPU)</h5>
-                    <h3 class="game-itself-bottom-inner-number">0</h3>
+                    <h3 class="game-itself-bottom-inner-number" id="computerWonText">0</h3>
                 </div>
             </div>
         </div>
